# robust-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
docs/: conventions.md  theory-notes.md
py/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
py/python/pyrobust/: __init__.py  _pyrobust.pyi  datasets.pyi
py/python/robust_py/: __init__.py  _robust_py.pyi  datasets.pyi
py/python/robustat_py/: __init__.py  _robustat_py.pyi  datasets.pyi
py/src/: datasets.rs  dispatch.rs  error.rs  lib.rs  location.rs  loss.rs  multivariate.rs  regression.rs  scale.rs
py/tests/: test_equivalence.py  test_smoke.py
robust-rs/: Cargo.toml  README.md
robust-rs-core/: Cargo.toml  README.md
robust-rs-core/src/: error.rs  lib.rs  rho.rs  scale.rs  solver.rs  theory.rs  types.rs
robust-rs-core/src/rho/: andrews.rs  cauchy.rs  hampel.rs  huber.rs  l1.rs  least_squares.rs  tukey.rs  welsch.rs
robust-rs-core/src/scale/: huber_proposal2.rs  mad.rs  qn.rs  s_scale.rs  sn.rs
robust-rs-core/src/solver/: control.rs
robust-rs-core/src/theory/: breakdown.rs  efficiency.rs  influence.rs  quadrature.rs  variance.rs
robust-rs-core/tests/: rho_analytic.rs  scale_consistency.rs  theory_efficiency.rs
robust-rs/examples/: demo.rs  mcd_outliers.rs  stars_mm.rs
robust-rs/src/: datasets.rs  estimator.rs  lib.rs  location.rs  multivariate.rs  prelude.rs  regression.rs  util.rs  wls.rs
robust-rs/src/datasets/data/: stackloss.csv
robust-rs/src/location/: hodges_lehmann.rs  m_location.rs  trimmed.rs
robust-rs/src/multivariate/: chi2.rs  correction.rs  linalg.rs  m_scatter.rs  mahalanobis.rs  mcd.rs  ogk.rs  tyler.rs
robust-rs/src/regression/: lts.rs  m_estimator.rs  mm_estimator.rs  s_estimator.rs  subsample.rs  theil_sen.rs
robust-rs/tests/: anchors.rs  equivariance.rs  golden_covmcd.rs  golden_lmrob.rs  golden_rlm.rs  lts_regression.rs  median_of_pairwise.rs  mm_regression.rs  multivariate.rs
