[package]
name = "robust-rs-core"
description = "Core abstractions for robust statistics: loss functions, robust scale and influence-function theory."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/robust-rs-core"

[lints]
workspace = true

[dependencies]
libm.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
rand.workspace = true
rand_distr.workspace = true
